Update: Update validation